--- a/env.example
+++ b/env.example
@@ -3,3 +3,6 @@ NEXT_PUBLIC_GRAPH_KEY=your_graph_key_here
 
 # Sequence API Key for DAO Hooks
 NEXT_PUBLIC_SEQUENCE_KEY=your_sequence_key_here
+
+# Reown (WalletConnect) Project ID
+NEXT_PUBLIC_REOWN_PROJECT_ID=your_reown_project_id_here
