--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@tanstack/react-query": "^5.0.0",
     "0xsequence": "^2.2.14",
-    "ethers": "^6.13.5",
-    "gql": "^1.1.2",
-    "graphql-request": "^6.1.0",
-    "viem": "^2.21.54",
+    "@coinbase/wallet-sdk": "^4.3.7",
+    "@gemini-wallet/core": "^0.3.2",
+    "@hookform/resolvers": "^3.10.0",
+    "@metamask/sdk": "^0.34.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -43,18 +41,30 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@reown/appkit": "^1.8.14",
+    "@reown/appkit-adapter-wagmi": "^1.8.14",
+    "@safe-global/safe-apps-provider": "^0.18.6",
+    "@safe-global/safe-apps-sdk": "^9.1.0",
+    "@tanstack/react-query": "^5.0.0",
     "@vercel/analytics": "1.3.1",
+    "@walletconnect/ethereum-provider": "^2.23.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.13.5",
+    "expo-linking": "^8.0.9",
+    "expo-web-browser": "^15.0.9",
     "geist": "^1.3.1",
+    "gql": "^1.1.2",
+    "graphql-request": "^6.1.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.25",
     "next-themes": "^0.4.6",
+    "porto": "^0.2.37",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -65,6 +75,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "viem": "^2.39.3",
+    "wagmi": "^3.0.0",
     "zod": "3.25.67"
   },
   "devDependencies": {
@@ -76,5 +88,6 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c"
 }
