--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +14,7 @@
     "@gemini-wallet/core": "^0.3.2",
     "@hookform/resolvers": "^3.10.0",
     "@metamask/sdk": "^0.34.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -41,13 +42,13 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@reown/appkit": "^1.8.14",
-    "@reown/appkit-adapter-wagmi": "^1.8.14",
+    "@reown/appkit": "^1.8.15",
+    "@reown/appkit-adapter-wagmi": "^1.8.15",
     "@safe-global/safe-apps-provider": "^0.18.6",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tanstack/react-query": "^5.0.0",
     "@vercel/analytics": "1.3.1",
-    "@walletconnect/ethereum-provider": "^2.23.0",
+    "@walletconnect/ethereum-provider": "^2.23.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -62,7 +63,7 @@
     "graphql-request": "^6.1.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.35",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
     "porto": "^0.2.37",
     "react": "^19",
