--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -43,10 +43,10 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@reown/appkit": "^1.8.15",
-    "@reown/appkit-adapter-wagmi": "^1.8.15",
+    "@reown/appkit-adapter-ethers": "^1.8.15",
     "@safe-global/safe-apps-provider": "^0.18.6",
     "@safe-global/safe-apps-sdk": "^9.1.0",
-    "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query": "^5.90.16",
     "@vercel/analytics": "1.3.1",
     "@walletconnect/ethereum-provider": "^2.23.1",
     "autoprefixer": "^10.4.20",
@@ -55,7 +55,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "ethers": "^6.13.5",
+    "ethers": "^6.16.0",
     "expo-linking": "^8.0.9",
     "expo-web-browser": "^15.0.9",
     "geist": "^1.3.1",
@@ -63,12 +63,12 @@
     "graphql-request": "^6.1.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.1.1",
+    "next": "^15.1.9",
     "next-themes": "^0.4.6",
     "porto": "^0.2.37",
-    "react": "^19",
+    "react": "^19.0.2",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19",
+    "react-dom": "^19.0.2",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
@@ -76,8 +76,6 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "viem": "^2.39.3",
-    "wagmi": "^3.0.0",
     "zod": "3.25.67"
   },
   "devDependencies": {
@@ -90,5 +88,5 @@
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c"
+  "packageManager": "pnpm@10.27.0"
 }
