--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,5 +3,7 @@ onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - bufferutil
   - keccak
+  - secp256k1
   - sharp
+  - unrs-resolver
   - utf-8-validate
