--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "0xsequence": "^2.2.14",
+    "@chainlink/ccip-js": "^0.2.6",
     "@coinbase/wallet-sdk": "^4.3.7",
     "@gemini-wallet/core": "^0.3.2",
     "@hookform/resolvers": "^3.10.0",
@@ -76,6 +77,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "viem": "^2.43.4",
     "zod": "3.25.67"
   },
   "devDependencies": {
